# CaffStore/CaffStore.Api/Controllers/UserController.cs
@@ -1,38 +1,38 @@
-﻿using CaffStore.IdentityProvider.Dtos;
-using Microsoft.AspNetCore.Authorization;
-using Microsoft.AspNetCore.Mvc;
-using System.Collections.Generic;
-using System.Threading.Tasks;
+﻿//using CaffStore.IdentityProvider.Dtos;
+//using Microsoft.AspNetCore.Authorization;
+//using Microsoft.AspNetCore.Mvc;
+//using System.Collections.Generic;
+//using System.Threading.Tasks;
 
-namespace CaffStore.IdentityProvider.Controllers
-{
-    [Authorize]
-    [ApiController]
-    [Route("[controller]")]
-    public class UserController : ControllerBase
-    {
-        //private readonly ApplicationDbContext context;
-        //private readonly UserManager<ApplicationUser> userManager;
+//namespace CaffStore.IdentityProvider.Controllers
+//{
+//    [Authorize]
+//    [ApiController]
+//    [Route("[controller]")]
+//    public class UserController : ControllerBase
+//    {
+//        //private readonly ApplicationDbContext context;
+//        //private readonly UserManager<ApplicationUser> userManager;
 
-        //public UserController(ApplicationDbContext context)
-        //{
-        //    this.context = context;
-        //    //this.userManager = userManager;
-        //}
+//        //public UserController(ApplicationDbContext context)
+//        //{
+//        //    this.context = context;
+//        //    //this.userManager = userManager;
+//        //}
 
-        [HttpGet]
-        public async Task<IEnumerable<UserDto>> Get()
-        {
-            //var users = await context.Users.ToListAsync();
-            return new List<UserDto>();
-        }
+//        [HttpGet]
+//        public async Task<IEnumerable<UserDto>> Get()
+//        {
+//            //var users = await context.Users.ToListAsync();
+//            return new List<UserDto>();
+//        }
 
-        [HttpPost]
-        public async Task SetUsername(string userId, string username)
-        {
+//        [HttpPost]
+//        public async Task SetUsername(string userId, string username)
+//        {
 
-        }
-    }
-}
+//        }
+//    }
+//}
 
 
